setup/3-Traefik/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secured
  namespace: infra
spec:
  chain:
    middlewares:
      - name: https-only
      #- name: known-ips
      #- name: auth-users
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  namespace: infra
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: auth-users
#  namespace: infra
#spec:
#  basicAuth:
#    secret: dashboards-auth
