setup/3-Traefik/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller-http-service
  namespace: infra
spec:
  selector:
    k8s-app: traefik-ingress-controller
  ports:
  - protocol: TCP
    port: 80
    name: http
  - protocol: TCP
    port: 443
    name: https
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller-dashboard-service
  namespace: infra
spec:
  selector:
    k8s-app: traefik-ingress-controller
  ports:
  - protocol: TCP
    port: 8080
    name: dashboard
