setup/3-Traefik/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-controller-dashboard-ingress
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: dashboards-auth
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/group: "Tools"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/containous/traefik/master/docs/content/assets/img/traefik.logo.png"
    forecastle.stakater.com/appName: traefik
    # traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    # traefik.ingress.kubernetes.io/redirect-entry-point: https
    # traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: traefik.cluster.local
      http:
        paths:
        - path: /
          backend:
            serviceName: traefik-ingress-controller-dashboard-service
            servicePort: 8080
